2010-10-08 Homer Xing <homer.xing@gmail.com>

	* If user reply "yes" to "no warranty" dialog, do not display that dialog any more.

2010-10-03 Homer Xing <homer.xing@gmail.com>

    * Fix issue 1026. If source config is wrong, then exit program. Otherwise, "if not package_name in cls.apt_cache" raises exception.
    * Fix issue 1027. No message dialog after icons pack completely downloaded.
    * Fix issue 1089. Dict <-> String have wrong conversation.

2010-09-23 Homer Xing <homer.xing@gmail.com>

    * Fix bug 635716 - window_manager_name: AttributeError: 'str' object has no attribute 'property_get'
    * Fix bug 632969 - AssertionError: line.endswith('\n') @ FedoraReposSection
	* Fix broken url for:
		Bioclipse, PBC, RouteConverter
	* Use new version:
		Electric, Nscript, Pydev, Geogebra, SweetHome

2010-07-28 Homer Xing <homer.xing@gmail.com>

    * Fix bug about SweetHome3D installing path, issue 1020.
    * Fix bug about RemasterSys installing, issue 1023.
    * Fix bug about a lot of third party repositories, issue 1022.
    * Fix issue about gnomekeyring.cancellederror, issue 999.
    * Fix bug about creating imagemagick icon, issue 1025.

2010-07-27 CHEN Yangyang <skabyy@gmail.com>

    * Optimize the repository configure pane
    * Add "add third party repository area" to repository configure pane
    * Fix some bugs

2010-07-27 HAN Haofu <gtxx3600@gmail.com>

	* Allow user to add new package-entry
	* Allow user to modify package-detail
	* Allow user to change package-icon
	* Allow user to add/remove package to/from Favourite

2010-07-27 Homer Xing <homer.xing@gmail.com>

    * Terminal window grabs focus.
    * Add KDevelop, an IDE similar to Visual Studio.
    * Add Kile, a LaTeX editor.
    * Add LyX, "what you see is what you mean" LaTeX editor.
    * Add Pdftk, a command line tool which can split, merge, encrypt and uncompress PDF files.
    * Add PDFedit, add marks and annotations on PDF files.